--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 ﻿{
     "connectionString": "mongodb://localhost:27017/mean-stack-registration-login-example",
     "apiUrl": "http://localhost:3000/api",
-    "secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "goodreadsdevkey": "n0RzJpL33507fo2H4bAfMg",
+    "isbndbKey": "JM6LFWKN"
 }
