--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^2.1.16",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "request": "^2.81.0"
   },
   "license": "MIT"
 }
