--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "mean-stack-registration-login-example",
+  "name": "the-goodreads",
   "version": "1.0.0",
-  "description": "MEAN Stack User Registration and Login Example Application",
+  "description": "Final project IT Talents",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/cornflourblue/mean-stack-registration-login-example.git"
+    "type": "git"
   },
   "dependencies": {
     "axios": "^0.16.1",
